1-ply-plain/xonsh/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> context
Rule 1     context -> command
Rule 2     context -> commands
Rule 3     command -> args
Rule 4     command -> <empty>
Rule 5     commands -> command
Rule 6     commands -> commands SEMI command
Rule 7     commands -> commands AND command
Rule 8     commands -> commands PIPE command
Rule 9     commands -> commands OR command
Rule 10    commands -> commands NEWLINE command
Rule 11    sub_expression -> DOLLAR_LPAREN commands RPAREN
Rule 12    sub_expression -> BANG_LPAREN commands RPAREN
Rule 13    sub_expression -> ATDOLLAR_LPAREN commands RPAREN
Rule 14    sub_expression -> DOLLAR_LBRACKET commands RBRACKET
Rule 15    sub_expression -> BANG_LBRACKET commands RBRACKET
Rule 16    sub_expression -> AT_LPAREN commands RPAREN
Rule 17    sub_expression -> DOLLAR_LPAREN commands
Rule 18    sub_expression -> BANG_LPAREN commands
Rule 19    sub_expression -> ATDOLLAR_LPAREN commands
Rule 20    sub_expression -> DOLLAR_LBRACKET commands
Rule 21    sub_expression -> BANG_LBRACKET commands
Rule 22    sub_expression -> AT_LPAREN commands
Rule 23    arg -> sub_expression
Rule 24    arg -> DOLLAR_LPAREN
Rule 25    arg -> DOLLAR_LBRACKET
Rule 26    arg -> BANG_LPAREN
Rule 27    arg -> BANG_LBRACKET
Rule 28    arg -> ATDOLLAR_LPAREN
Rule 29    arg -> AT_LPAREN
Rule 30    arg -> STRING
Rule 31    arg -> ANY
Rule 32    args -> arg
Rule 33    args -> args arg

Terminals, with rules where they appear

AND                  : 7
ANY                  : 31
ATDOLLAR_LPAREN      : 13 19 28
AT_LPAREN            : 16 22 29
BANG_LBRACKET        : 15 21 27
BANG_LPAREN          : 12 18 26
DOLLAR_LBRACKET      : 14 20 25
DOLLAR_LPAREN        : 11 17 24
NEWLINE              : 10
OR                   : 9
PIPE                 : 8
RBRACKET             : 14 15
RPAREN               : 11 12 13 16
SEMI                 : 6
STRING               : 30
error                : 

Nonterminals, with rules where they appear

arg                  : 32 33
args                 : 3 33
command              : 1 5 6 7 8 9 10
commands             : 2 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
context              : 0
sub_expression       : 23

Parsing method: LALR

state 0

    (0) S' -> . context
    (1) context -> . command
    (2) context -> . commands
    (3) command -> . args
    (4) command -> .
    (5) commands -> . command
    (6) commands -> . commands SEMI command
    (7) commands -> . commands AND command
    (8) commands -> . commands PIPE command
    (9) commands -> . commands OR command
    (10) commands -> . commands NEWLINE command
    (32) args -> . arg
    (33) args -> . args arg
    (23) arg -> . sub_expression
    (24) arg -> . DOLLAR_LPAREN
    (25) arg -> . DOLLAR_LBRACKET
    (26) arg -> . BANG_LPAREN
    (27) arg -> . BANG_LBRACKET
    (28) arg -> . ATDOLLAR_LPAREN
    (29) arg -> . AT_LPAREN
    (30) arg -> . STRING
    (31) arg -> . ANY
    (11) sub_expression -> . DOLLAR_LPAREN commands RPAREN
    (12) sub_expression -> . BANG_LPAREN commands RPAREN
    (13) sub_expression -> . ATDOLLAR_LPAREN commands RPAREN
    (14) sub_expression -> . DOLLAR_LBRACKET commands RBRACKET
    (15) sub_expression -> . BANG_LBRACKET commands RBRACKET
    (16) sub_expression -> . AT_LPAREN commands RPAREN
    (17) sub_expression -> . DOLLAR_LPAREN commands
    (18) sub_expression -> . BANG_LPAREN commands
    (19) sub_expression -> . ATDOLLAR_LPAREN commands
    (20) sub_expression -> . DOLLAR_LBRACKET commands
    (21) sub_expression -> . BANG_LBRACKET commands
    (22) sub_expression -> . AT_LPAREN commands

    $end            reduce using rule 4 (command -> .)
    SEMI            reduce using rule 4 (command -> .)
    AND             reduce using rule 4 (command -> .)
    PIPE            reduce using rule 4 (command -> .)
    OR              reduce using rule 4 (command -> .)
    NEWLINE         reduce using rule 4 (command -> .)
    DOLLAR_LPAREN   shift and go to state 7
    DOLLAR_LBRACKET shift and go to state 8
    BANG_LPAREN     shift and go to state 9
    BANG_LBRACKET   shift and go to state 10
    ATDOLLAR_LPAREN shift and go to state 11
    AT_LPAREN       shift and go to state 12
    STRING          shift and go to state 13
    ANY             shift and go to state 14

    context                        shift and go to state 1
    command                        shift and go to state 2
    commands                       shift and go to state 3
    args                           shift and go to state 4
    arg                            shift and go to state 5
    sub_expression                 shift and go to state 6

state 1

    (0) S' -> context .



state 2

    (1) context -> command .
    (5) commands -> command .

  ! reduce/reduce conflict for $end resolved using rule 1 (context -> command .)
    $end            reduce using rule 1 (context -> command .)
    SEMI            reduce using rule 5 (commands -> command .)
    AND             reduce using rule 5 (commands -> command .)
    PIPE            reduce using rule 5 (commands -> command .)
    OR              reduce using rule 5 (commands -> command .)
    NEWLINE         reduce using rule 5 (commands -> command .)

  ! $end            [ reduce using rule 5 (commands -> command .) ]


state 3

    (2) context -> commands .
    (6) commands -> commands . SEMI command
    (7) commands -> commands . AND command
    (8) commands -> commands . PIPE command
    (9) commands -> commands . OR command
    (10) commands -> commands . NEWLINE command

    $end            reduce using rule 2 (context -> commands .)
    SEMI            shift and go to state 15
    AND             shift and go to state 16
    PIPE            shift and go to state 17
    OR              shift and go to state 18
    NEWLINE         shift and go to state 19


state 4

    (3) command -> args .
    (33) args -> args . arg
    (23) arg -> . sub_expression
    (24) arg -> . DOLLAR_LPAREN
    (25) arg -> . DOLLAR_LBRACKET
    (26) arg -> . BANG_LPAREN
    (27) arg -> . BANG_LBRACKET
    (28) arg -> . ATDOLLAR_LPAREN
    (29) arg -> . AT_LPAREN
    (30) arg -> . STRING
    (31) arg -> . ANY
    (11) sub_expression -> . DOLLAR_LPAREN commands RPAREN
    (12) sub_expression -> . BANG_LPAREN commands RPAREN
    (13) sub_expression -> . ATDOLLAR_LPAREN commands RPAREN
    (14) sub_expression -> . DOLLAR_LBRACKET commands RBRACKET
    (15) sub_expression -> . BANG_LBRACKET commands RBRACKET
    (16) sub_expression -> . AT_LPAREN commands RPAREN
    (17) sub_expression -> . DOLLAR_LPAREN commands
    (18) sub_expression -> . BANG_LPAREN commands
    (19) sub_expression -> . ATDOLLAR_LPAREN commands
    (20) sub_expression -> . DOLLAR_LBRACKET commands
    (21) sub_expression -> . BANG_LBRACKET commands
    (22) sub_expression -> . AT_LPAREN commands

  ! shift/reduce conflict for DOLLAR_LPAREN resolved as shift
  ! shift/reduce conflict for DOLLAR_LBRACKET resolved as shift
  ! shift/reduce conflict for BANG_LPAREN resolved as shift
  ! shift/reduce conflict for BANG_LBRACKET resolved as shift
  ! shift/reduce conflict for ATDOLLAR_LPAREN resolved as shift
  ! shift/reduce conflict for AT_LPAREN resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for ANY resolved as shift
    $end            reduce using rule 3 (command -> args .)
    SEMI            reduce using rule 3 (command -> args .)
    AND             reduce using rule 3 (command -> args .)
    PIPE            reduce using rule 3 (command -> args .)
    OR              reduce using rule 3 (command -> args .)
    NEWLINE         reduce using rule 3 (command -> args .)
    RPAREN          reduce using rule 3 (command -> args .)
    RBRACKET        reduce using rule 3 (command -> args .)
    DOLLAR_LPAREN   shift and go to state 7
    DOLLAR_LBRACKET shift and go to state 8
    BANG_LPAREN     shift and go to state 9
    BANG_LBRACKET   shift and go to state 10
    ATDOLLAR_LPAREN shift and go to state 11
    AT_LPAREN       shift and go to state 12
    STRING          shift and go to state 13
    ANY             shift and go to state 14

  ! DOLLAR_LPAREN   [ reduce using rule 3 (command -> args .) ]
  ! DOLLAR_LBRACKET [ reduce using rule 3 (command -> args .) ]
  ! BANG_LPAREN     [ reduce using rule 3 (command -> args .) ]
  ! BANG_LBRACKET   [ reduce using rule 3 (command -> args .) ]
  ! ATDOLLAR_LPAREN [ reduce using rule 3 (command -> args .) ]
  ! AT_LPAREN       [ reduce using rule 3 (command -> args .) ]
  ! STRING          [ reduce using rule 3 (command -> args .) ]
  ! ANY             [ reduce using rule 3 (command -> args .) ]

    arg                            shift and go to state 20
    sub_expression                 shift and go to state 6

state 5

    (32) args -> arg .

    DOLLAR_LPAREN   reduce using rule 32 (args -> arg .)
    DOLLAR_LBRACKET reduce using rule 32 (args -> arg .)
    BANG_LPAREN     reduce using rule 32 (args -> arg .)
    BANG_LBRACKET   reduce using rule 32 (args -> arg .)
    ATDOLLAR_LPAREN reduce using rule 32 (args -> arg .)
    AT_LPAREN       reduce using rule 32 (args -> arg .)
    STRING          reduce using rule 32 (args -> arg .)
    ANY             reduce using rule 32 (args -> arg .)
    $end            reduce using rule 32 (args -> arg .)
    SEMI            reduce using rule 32 (args -> arg .)
    AND             reduce using rule 32 (args -> arg .)
    PIPE            reduce using rule 32 (args -> arg .)
    OR              reduce using rule 32 (args -> arg .)
    NEWLINE         reduce using rule 32 (args -> arg .)
    RPAREN          reduce using rule 32 (args -> arg .)
    RBRACKET        reduce using rule 32 (args -> arg .)


state 6

    (23) arg -> sub_expression .

    DOLLAR_LPAREN   reduce using rule 23 (arg -> sub_expression .)
    DOLLAR_LBRACKET reduce using rule 23 (arg -> sub_expression .)
    BANG_LPAREN     reduce using rule 23 (arg -> sub_expression .)
    BANG_LBRACKET   reduce using rule 23 (arg -> sub_expression .)
    ATDOLLAR_LPAREN reduce using rule 23 (arg -> sub_expression .)
    AT_LPAREN       reduce using rule 23 (arg -> sub_expression .)
    STRING          reduce using rule 23 (arg -> sub_expression .)
    ANY             reduce using rule 23 (arg -> sub_expression .)
    $end            reduce using rule 23 (arg -> sub_expression .)
    SEMI            reduce using rule 23 (arg -> sub_expression .)
    AND             reduce using rule 23 (arg -> sub_expression .)
    PIPE            reduce using rule 23 (arg -> sub_expression .)
    OR              reduce using rule 23 (arg -> sub_expression .)
    NEWLINE         reduce using rule 23 (arg -> sub_expression .)
    RPAREN          reduce using rule 23 (arg -> sub_expression .)
    RBRACKET        reduce using rule 23 (arg -> sub_expression .)


state 7

    (24) arg -> DOLLAR_LPAREN .
    (11) sub_expression -> DOLLAR_LPAREN . commands RPAREN
    (17) sub_expression -> DOLLAR_LPAREN . commands
    (5) commands -> . command
    (6) commands -> . commands SEMI command
    (7) commands -> . commands AND command
    (8) commands -> . commands PIPE command
    (9) commands -> . commands OR command
    (10) commands -> . commands NEWLINE command
    (3) command -> . args
    (4) command -> .
    (32) args -> . arg
    (33) args -> . args arg
    (23) arg -> . sub_expression
    (24) arg -> . DOLLAR_LPAREN
    (25) arg -> . DOLLAR_LBRACKET
    (26) arg -> . BANG_LPAREN
    (27) arg -> . BANG_LBRACKET
    (28) arg -> . ATDOLLAR_LPAREN
    (29) arg -> . AT_LPAREN
    (30) arg -> . STRING
    (31) arg -> . ANY
    (11) sub_expression -> . DOLLAR_LPAREN commands RPAREN
    (12) sub_expression -> . BANG_LPAREN commands RPAREN
    (13) sub_expression -> . ATDOLLAR_LPAREN commands RPAREN
    (14) sub_expression -> . DOLLAR_LBRACKET commands RBRACKET
    (15) sub_expression -> . BANG_LBRACKET commands RBRACKET
    (16) sub_expression -> . AT_LPAREN commands RPAREN
    (17) sub_expression -> . DOLLAR_LPAREN commands
    (18) sub_expression -> . BANG_LPAREN commands
    (19) sub_expression -> . ATDOLLAR_LPAREN commands
    (20) sub_expression -> . DOLLAR_LBRACKET commands
    (21) sub_expression -> . BANG_LBRACKET commands
    (22) sub_expression -> . AT_LPAREN commands

  ! reduce/reduce conflict for DOLLAR_LPAREN resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for DOLLAR_LBRACKET resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for BANG_LPAREN resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for BANG_LBRACKET resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for ATDOLLAR_LPAREN resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for AT_LPAREN resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for STRING resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for ANY resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for $end resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for SEMI resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for AND resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for PIPE resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for OR resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for NEWLINE resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for RPAREN resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for RBRACKET resolved using rule 4 (command -> .)
  ! shift/reduce conflict for DOLLAR_LPAREN resolved as shift
  ! shift/reduce conflict for DOLLAR_LBRACKET resolved as shift
  ! shift/reduce conflict for BANG_LPAREN resolved as shift
  ! shift/reduce conflict for BANG_LBRACKET resolved as shift
  ! shift/reduce conflict for ATDOLLAR_LPAREN resolved as shift
  ! shift/reduce conflict for AT_LPAREN resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for ANY resolved as shift
    $end            reduce using rule 4 (command -> .)
    SEMI            reduce using rule 4 (command -> .)
    AND             reduce using rule 4 (command -> .)
    PIPE            reduce using rule 4 (command -> .)
    OR              reduce using rule 4 (command -> .)
    NEWLINE         reduce using rule 4 (command -> .)
    RPAREN          reduce using rule 4 (command -> .)
    RBRACKET        reduce using rule 4 (command -> .)
    DOLLAR_LPAREN   shift and go to state 7
    DOLLAR_LBRACKET shift and go to state 8
    BANG_LPAREN     shift and go to state 9
    BANG_LBRACKET   shift and go to state 10
    ATDOLLAR_LPAREN shift and go to state 11
    AT_LPAREN       shift and go to state 12
    STRING          shift and go to state 13
    ANY             shift and go to state 14

  ! DOLLAR_LPAREN   [ reduce using rule 24 (arg -> DOLLAR_LPAREN .) ]
  ! DOLLAR_LBRACKET [ reduce using rule 24 (arg -> DOLLAR_LPAREN .) ]
  ! BANG_LPAREN     [ reduce using rule 24 (arg -> DOLLAR_LPAREN .) ]
  ! BANG_LBRACKET   [ reduce using rule 24 (arg -> DOLLAR_LPAREN .) ]
  ! ATDOLLAR_LPAREN [ reduce using rule 24 (arg -> DOLLAR_LPAREN .) ]
  ! AT_LPAREN       [ reduce using rule 24 (arg -> DOLLAR_LPAREN .) ]
  ! STRING          [ reduce using rule 24 (arg -> DOLLAR_LPAREN .) ]
  ! ANY             [ reduce using rule 24 (arg -> DOLLAR_LPAREN .) ]
  ! $end            [ reduce using rule 24 (arg -> DOLLAR_LPAREN .) ]
  ! SEMI            [ reduce using rule 24 (arg -> DOLLAR_LPAREN .) ]
  ! AND             [ reduce using rule 24 (arg -> DOLLAR_LPAREN .) ]
  ! PIPE            [ reduce using rule 24 (arg -> DOLLAR_LPAREN .) ]
  ! OR              [ reduce using rule 24 (arg -> DOLLAR_LPAREN .) ]
  ! NEWLINE         [ reduce using rule 24 (arg -> DOLLAR_LPAREN .) ]
  ! RPAREN          [ reduce using rule 24 (arg -> DOLLAR_LPAREN .) ]
  ! RBRACKET        [ reduce using rule 24 (arg -> DOLLAR_LPAREN .) ]
  ! DOLLAR_LPAREN   [ reduce using rule 4 (command -> .) ]
  ! DOLLAR_LBRACKET [ reduce using rule 4 (command -> .) ]
  ! BANG_LPAREN     [ reduce using rule 4 (command -> .) ]
  ! BANG_LBRACKET   [ reduce using rule 4 (command -> .) ]
  ! ATDOLLAR_LPAREN [ reduce using rule 4 (command -> .) ]
  ! AT_LPAREN       [ reduce using rule 4 (command -> .) ]
  ! STRING          [ reduce using rule 4 (command -> .) ]
  ! ANY             [ reduce using rule 4 (command -> .) ]

    commands                       shift and go to state 21
    command                        shift and go to state 22
    args                           shift and go to state 4
    arg                            shift and go to state 5
    sub_expression                 shift and go to state 6

state 8

    (25) arg -> DOLLAR_LBRACKET .
    (14) sub_expression -> DOLLAR_LBRACKET . commands RBRACKET
    (20) sub_expression -> DOLLAR_LBRACKET . commands
    (5) commands -> . command
    (6) commands -> . commands SEMI command
    (7) commands -> . commands AND command
    (8) commands -> . commands PIPE command
    (9) commands -> . commands OR command
    (10) commands -> . commands NEWLINE command
    (3) command -> . args
    (4) command -> .
    (32) args -> . arg
    (33) args -> . args arg
    (23) arg -> . sub_expression
    (24) arg -> . DOLLAR_LPAREN
    (25) arg -> . DOLLAR_LBRACKET
    (26) arg -> . BANG_LPAREN
    (27) arg -> . BANG_LBRACKET
    (28) arg -> . ATDOLLAR_LPAREN
    (29) arg -> . AT_LPAREN
    (30) arg -> . STRING
    (31) arg -> . ANY
    (11) sub_expression -> . DOLLAR_LPAREN commands RPAREN
    (12) sub_expression -> . BANG_LPAREN commands RPAREN
    (13) sub_expression -> . ATDOLLAR_LPAREN commands RPAREN
    (14) sub_expression -> . DOLLAR_LBRACKET commands RBRACKET
    (15) sub_expression -> . BANG_LBRACKET commands RBRACKET
    (16) sub_expression -> . AT_LPAREN commands RPAREN
    (17) sub_expression -> . DOLLAR_LPAREN commands
    (18) sub_expression -> . BANG_LPAREN commands
    (19) sub_expression -> . ATDOLLAR_LPAREN commands
    (20) sub_expression -> . DOLLAR_LBRACKET commands
    (21) sub_expression -> . BANG_LBRACKET commands
    (22) sub_expression -> . AT_LPAREN commands

  ! reduce/reduce conflict for DOLLAR_LPAREN resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for DOLLAR_LBRACKET resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for BANG_LPAREN resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for BANG_LBRACKET resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for ATDOLLAR_LPAREN resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for AT_LPAREN resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for STRING resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for ANY resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for $end resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for SEMI resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for AND resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for PIPE resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for OR resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for NEWLINE resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for RPAREN resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for RBRACKET resolved using rule 4 (command -> .)
  ! shift/reduce conflict for DOLLAR_LPAREN resolved as shift
  ! shift/reduce conflict for DOLLAR_LBRACKET resolved as shift
  ! shift/reduce conflict for BANG_LPAREN resolved as shift
  ! shift/reduce conflict for BANG_LBRACKET resolved as shift
  ! shift/reduce conflict for ATDOLLAR_LPAREN resolved as shift
  ! shift/reduce conflict for AT_LPAREN resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for ANY resolved as shift
    $end            reduce using rule 4 (command -> .)
    SEMI            reduce using rule 4 (command -> .)
    AND             reduce using rule 4 (command -> .)
    PIPE            reduce using rule 4 (command -> .)
    OR              reduce using rule 4 (command -> .)
    NEWLINE         reduce using rule 4 (command -> .)
    RPAREN          reduce using rule 4 (command -> .)
    RBRACKET        reduce using rule 4 (command -> .)
    DOLLAR_LPAREN   shift and go to state 7
    DOLLAR_LBRACKET shift and go to state 8
    BANG_LPAREN     shift and go to state 9
    BANG_LBRACKET   shift and go to state 10
    ATDOLLAR_LPAREN shift and go to state 11
    AT_LPAREN       shift and go to state 12
    STRING          shift and go to state 13
    ANY             shift and go to state 14

  ! DOLLAR_LPAREN   [ reduce using rule 25 (arg -> DOLLAR_LBRACKET .) ]
  ! DOLLAR_LBRACKET [ reduce using rule 25 (arg -> DOLLAR_LBRACKET .) ]
  ! BANG_LPAREN     [ reduce using rule 25 (arg -> DOLLAR_LBRACKET .) ]
  ! BANG_LBRACKET   [ reduce using rule 25 (arg -> DOLLAR_LBRACKET .) ]
  ! ATDOLLAR_LPAREN [ reduce using rule 25 (arg -> DOLLAR_LBRACKET .) ]
  ! AT_LPAREN       [ reduce using rule 25 (arg -> DOLLAR_LBRACKET .) ]
  ! STRING          [ reduce using rule 25 (arg -> DOLLAR_LBRACKET .) ]
  ! ANY             [ reduce using rule 25 (arg -> DOLLAR_LBRACKET .) ]
  ! $end            [ reduce using rule 25 (arg -> DOLLAR_LBRACKET .) ]
  ! SEMI            [ reduce using rule 25 (arg -> DOLLAR_LBRACKET .) ]
  ! AND             [ reduce using rule 25 (arg -> DOLLAR_LBRACKET .) ]
  ! PIPE            [ reduce using rule 25 (arg -> DOLLAR_LBRACKET .) ]
  ! OR              [ reduce using rule 25 (arg -> DOLLAR_LBRACKET .) ]
  ! NEWLINE         [ reduce using rule 25 (arg -> DOLLAR_LBRACKET .) ]
  ! RPAREN          [ reduce using rule 25 (arg -> DOLLAR_LBRACKET .) ]
  ! RBRACKET        [ reduce using rule 25 (arg -> DOLLAR_LBRACKET .) ]
  ! DOLLAR_LPAREN   [ reduce using rule 4 (command -> .) ]
  ! DOLLAR_LBRACKET [ reduce using rule 4 (command -> .) ]
  ! BANG_LPAREN     [ reduce using rule 4 (command -> .) ]
  ! BANG_LBRACKET   [ reduce using rule 4 (command -> .) ]
  ! ATDOLLAR_LPAREN [ reduce using rule 4 (command -> .) ]
  ! AT_LPAREN       [ reduce using rule 4 (command -> .) ]
  ! STRING          [ reduce using rule 4 (command -> .) ]
  ! ANY             [ reduce using rule 4 (command -> .) ]

    commands                       shift and go to state 23
    command                        shift and go to state 22
    args                           shift and go to state 4
    arg                            shift and go to state 5
    sub_expression                 shift and go to state 6

state 9

    (26) arg -> BANG_LPAREN .
    (12) sub_expression -> BANG_LPAREN . commands RPAREN
    (18) sub_expression -> BANG_LPAREN . commands
    (5) commands -> . command
    (6) commands -> . commands SEMI command
    (7) commands -> . commands AND command
    (8) commands -> . commands PIPE command
    (9) commands -> . commands OR command
    (10) commands -> . commands NEWLINE command
    (3) command -> . args
    (4) command -> .
    (32) args -> . arg
    (33) args -> . args arg
    (23) arg -> . sub_expression
    (24) arg -> . DOLLAR_LPAREN
    (25) arg -> . DOLLAR_LBRACKET
    (26) arg -> . BANG_LPAREN
    (27) arg -> . BANG_LBRACKET
    (28) arg -> . ATDOLLAR_LPAREN
    (29) arg -> . AT_LPAREN
    (30) arg -> . STRING
    (31) arg -> . ANY
    (11) sub_expression -> . DOLLAR_LPAREN commands RPAREN
    (12) sub_expression -> . BANG_LPAREN commands RPAREN
    (13) sub_expression -> . ATDOLLAR_LPAREN commands RPAREN
    (14) sub_expression -> . DOLLAR_LBRACKET commands RBRACKET
    (15) sub_expression -> . BANG_LBRACKET commands RBRACKET
    (16) sub_expression -> . AT_LPAREN commands RPAREN
    (17) sub_expression -> . DOLLAR_LPAREN commands
    (18) sub_expression -> . BANG_LPAREN commands
    (19) sub_expression -> . ATDOLLAR_LPAREN commands
    (20) sub_expression -> . DOLLAR_LBRACKET commands
    (21) sub_expression -> . BANG_LBRACKET commands
    (22) sub_expression -> . AT_LPAREN commands

  ! reduce/reduce conflict for DOLLAR_LPAREN resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for DOLLAR_LBRACKET resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for BANG_LPAREN resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for BANG_LBRACKET resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for ATDOLLAR_LPAREN resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for AT_LPAREN resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for STRING resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for ANY resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for $end resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for SEMI resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for AND resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for PIPE resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for OR resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for NEWLINE resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for RPAREN resolved using rule 4 (command -> .)
  ! reduce/reduce conflict for RBRACKET resolved using rule 4 (command -> .)
  ! shift/reduce conflict for DOLLAR_LPAREN resolved as shift
  ! shift/reduce conflict for DOLLAR_LBRACKET resolved as shift
  ! shift/reduce conflict for BANG_LPAREN resolved as shift
  ! shift/reduce conflict for BANG_LBRACKET resolved as shift
  ! shift/reduce conflict for ATDOLLAR_LPAREN resolved as shift
  ! shift/reduce conflict for AT_LPAREN resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for ANY resolved as shift
    $end            reduce using rule 4 (command -> .)
    SEMI            reduce using rule 4 (command -> .)
    AND             reduce using rule 4 (command -> .)
    PIPE            reduce using rule 4 (command -> .)
    OR              reduce using rule 4 (command -> .)
    NEWLINE         reduce using rule 4 (command -> .)
    RPAREN          reduce using rule 4 (command -> .)
    RBRACKET        reduce using rule 4 (command -> .)
    DOLLAR_LPAREN   shift and go to state 7
    DOLLAR_LBRACKET shift and go to state 8
    BANG_LPAREN     shift and go to state 9
    BANG_LBRACKET   shift and go to state 10
    ATDOLLAR_LPAREN shift and go to state 11
    AT_LPAREN       shift and go to state 12
    STRING          shift and go to state 13
    ANY             shift and go to state 14

  ! DOLLAR_LPAREN   [ reduce using rule 26 (arg -> BANG_LPAREN .) ]
  ! DOLLAR_LBRACKET [ reduce using rule 26 (arg -> BANG_LPAREN .) ]
  ! BANG_LPAREN     [ reduce using rule 26 (arg -> BANG_LPAREN .) ]
  ! BANG_LBRACKET   [ reduce using rule 26 (arg -> BANG_LPAREN .) ]
  ! ATDOLLAR_LPAREN [ reduce using rule 26 (arg -> BANG_LPAREN .) ]
  ! AT_LPAREN       [ reduce using rule 26 (arg -> BANG_LPAREN .) ]
  ! STRING          [ reduce using rule 26 (arg -> BANG_LPAREN .) ]
  ! ANY             [ reduce using rule 26 (arg -> BANG_LPAREN .) ]
  ! $end            [ reduce using rule 26 (arg -> BANG_LPAREN .) ]
  ! SEMI            [ reduce using rule 26 (arg -> BANG_LPAREN .) ]
  ! AND             [ reduce using rule 26 (arg -> BANG_LPAREN .) ]
  ! PIPE            [ reduce using rule 26 (arg -> BANG_LPAREN .) ]
  ! OR              [ reduce using rule 26 (arg -> BANG_LPAREN .) ]
  ! NEWLINE         [ reduce using rule 26 (arg -> BANG_LPAREN .) ]
  ! RPAREN          [ reduce using rule 26 (arg -> BANG_LPAREN .) ]
  ! RBRACKET        [ reduce using rule 26 (arg -> BANG_LPAREN .) ]
  ! DOLLAR_LPAREN   [ reduce using rule 4 (command -> .) ]
  ! DOLLAR_LBRACKET [ reduce using rule 4 (command -> .) ]
  ! BANG_LPAREN     [ reduce using rule 4 (command -> .) ]
  ! BANG_LBRACKET   [ reduce using rule 4 (command -> .) ]
  ! ATDOLLAR_LPAREN [ reduce using rule 4 (command -> .) ]
  ! AT_LPAREN       [ reduce using rule 4 (command -> .) ]
  ! STRING          [ reduce using rule 4 (command -> .) ]
  ! ANY             [ reduce using rule 4 (command -> .) ]

    commands                       shift and go to state 24
    command                        shift and go to state 22
    args                           shift and go to state 4
    arg                            shift and go to state 5
    sub_expression                 shift and go to state 6

state 10

    (27) arg -> BANG_LBRACKET .
    (15) sub_expression -> BANG_LBRACKET . commands RBRACKET
    (21) sub_expression -> BANG_LBRACKET . commands
    (5) commands -> . command
    (6) commands -> . commands SEMI command
    (7) commands -> . commands AND command
    (8) commands -> . commands PIPE command
    (9) commands -> . commands OR command
    (10) commands -> . commands NEWLINE command
    (3) command -> . args
    (4) command -> .
    (32) args -> . arg
    (33) args -> . args arg
    (23) arg -> . sub_expression
    (24) arg -> . DOLLAR_LPAREN
    (25) arg -> . DOLLAR_LBRACKET
    (26) arg -> . BANG_LPAREN
    (27) arg -> . BANG_LBRACKET
    (28) arg -> . ATDOLLAR_LPAREN
    (29) arg -> . AT_LPAREN
    (30) arg -> . STRING
    (31) arg -> . ANY
    (11) sub_expression -> . DOLLAR_LPAREN commands RPAREN
    (12) sub_expression -> . BANG_LPAREN commands RPAREN
    (13) sub_expression -> . ATDOLLAR_LPAREN commands RPAREN
    (14) sub_expression -> . DOLLAR_LBRACKET commands RBRACKET
    (15) sub_expression -> . BANG_LBRACKET commands RBRACKET
    (16) sub_expression -> . AT_LPAREN commands RPAREN
    (17) sub_expression -> . DOLLAR_LPAREN commands
    (18) sub_expression -> . BANG_LPAREN commands
    (19) sub_expression -> . ATDOLLAR_LPAREN commands
    (20) sub_expression -> . DOLLAR_LBRACKET commands
    (21) sub_expression -> . BANG_LBRACKET commands
    (22) sub_expression -> . AT_LPAREN commands
